--- a/index.html
+++ b/index.html
@@ -1,15 +1,42 @@
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link 
+    href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" 
+    rel="stylesheet">
 
 <style>
     body {
         background-color: black;
+        font-family: 'DotGothic16', sans-serif;
     }
 </style>
 
-<canvas></canvas>
+<div style="position: relative; display: inline-block">
+    <canvas></canvas>
+    <div
+        id="gameOver" 
+        style="
+        position: absolute; 
+        top: 0; 
+        bottom: 0; 
+        left: 0; right: 0; 
+        display: none; 
+        align-items: center;
+        justify-content: center;
+        font-size: 80px;
+        color: white;
+        -webkit-text-stroke: 3px black;
+        "
+    >
+        GAME OVER
+    </div>
+</div>
+
 
 <script src="js/waypointsPathing.js"></script>
 <script src="js/towerPlacementsData.js"></script>
 <script src="js/PlacementTile.js"></script>
+<script src="js/Projectile.js"></script>
 <script src="js/Enemy.js"></script>
 <script src="js/Tower.js"></script>
 <script src="js/index.js"></script>
