--- a/index.html
+++ b/index.html
@@ -1,115 +1,144 @@
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link 
-    href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" 
-    rel="stylesheet">
+<!DOCTYPE html>
 
-<style>
-    body {
-        background-color: black;
-        font-family: 'DotGothic16', sans-serif;
-    }
-</style>
+<html lang="en">
 
-<div style="position: relative; display: inline-block">
-<canvas></canvas>
-    <div
-        id="gameOver" 
-        style="
-        position: absolute; 
-        top: 0; 
-        bottom: 0; 
-        left: 0; right: 0; 
-        display: none; 
-        align-items: center;
-        justify-content: center;
-        font-size: 80px;
-        color: white;
-        -webkit-text-stroke: 3px black;
-        "
-    >
-        GAME OVER
-    </div>
-    <div 
-        style="
-        position: absolute; 
-        top: 4px; 
-        right: 8px; 
-        font-size: 25;
-        color: black;
-        display: flex;
-        align-items: center;
-        font-weight: bold;
-        "
-    >
-        <div
+<head>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tower Defense Game</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+            background-color: black;
+            font-family: 'DotGothic16', sans-serif;
+        }
+        .gameOverWinContainer {
+            position: absolute; 
+            top: 0; 
+            bottom: 0; 
+            left: 0; 
+            right: 0;
+            display: none; 
+            align-items: center;
+            justify-content: center;
+            background-color: rgba(0, 0, 0, 0.75);
+            font-size: 80px;
+            color: white;
+            -webkit-text-stroke: 3px black;
+        }
+        #gameOver, #youWin {
+            font-size: 100px;
+            color: white;
+            -webkit-text-stroke: 3px black;
+        }
+    </style>
+
+</head>
+
+<body>
+    <div style="position: relative; display: inline-block">
+        <canvas></canvas>
+        <div id="gameOver" class="gameOverWinContainer">
+            GAME OVER
+        </div>
+        <div id="youWin" class="gameOverWinContainer">
+            YOU WIN!
+        </div>
+        <div 
             style="
-                position: absolute;
-                top: 0;
-                right: 5px;
-                width: 250px;
-                height: 40px;
-                border-radius: 10px;
-                background: linear-gradient(
-                    to right top,
-                    rgba(0, 0, 0, 0.05), 
-                    rgba(0, 0, 0, 0.225),
-                    rgba(0, 0, 0, 0.05) 
-                );
-            ">
-        </div>
-        <div id="interfaceWave" style="display: flex; align-items: center;">  
-            <svg 
-                style="width: 27px; height: 27px; color: black; margin-right: 3px;"
-                xmlns="http://www.w3.org/2000/svg" 
-                viewBox="0 0 24 24" 
-                fill="currentColor" 
-                class="w-6 h-6"
+            position: absolute; 
+            top: 4px; 
+            right: 8px; 
+            font-size: 25;
+            color: black;
+            display: flex;
+            align-items: center;
+            font-weight: bold;
+            "
+        >
+            <div
+                style="
+                    position: absolute;
+                    top: 0;
+                    right: 5px;
+                    width: 215px;
+                    height: 30px;
+                    border-radius: 10px;
+                    background: linear-gradient(
+                        to right top,
+                        rgba(0, 0, 0, 0.05), 
+                        rgba(0, 0, 0, 0.225),
+                        rgba(0, 0, 0, 0.05) 
+                    );
+                "
             >
-                <path 
-                fill-rule="evenodd" 
-                d="M8.478 1.6a.75.75 0 0 1 .273 1.026 3.72 3.72 0 0 0-.425 1.121c.058.058.118.114.18.168A4.491 4.491 0 0 1 12 2.25c1.413 0 2.673.651 3.497 1.668.06-.054.12-.11.178-.167a3.717 3.717 0 0 0-.426-1.125.75.75 0 1 1 1.298-.752 5.22 5.22 0 0 1 .671 2.046.75.75 0 0 1-.187.582c-.241.27-.505.52-.787.749a4.494 4.494 0 0 1 .216 2.1c-.106.792-.753 1.295-1.417 1.403-.182.03-.364.057-.547.081.152.227.273.476.359.742a23.122 23.122 0 0 0 3.832-.803 23.241 23.241 0 0 0-.345-2.634.75.75 0 0 1 1.474-.28c.21 1.115.348 2.256.404 3.418a.75.75 0 0 1-.516.75c-1.527.499-3.119.854-4.76 1.049-.074.38-.22.735-.423 1.05 2.066.209 4.058.672 5.943 1.358a.75.75 0 0 1 .492.75 24.665 24.665 0 0 1-1.189 6.25.75.75 0 0 1-1.425-.47 23.14 23.14 0 0 0 1.077-5.306c-.5-.169-1.009-.32-1.524-.455.068.234.104.484.104.746 0 3.956-2.521 7.5-6 7.5-3.478 0-6-3.544-6-7.5 0-.262.037-.511.104-.746-.514.135-1.022.286-1.522.455.154 1.838.52 3.616 1.077 5.307a.75.75 0 1 1-1.425.468 24.662 24.662 0 0 1-1.19-6.25.75.75 0 0 1 .493-.749 24.586 24.586 0 0 1 4.964-1.24h.01c.321-.046.644-.085.969-.118a2.983 2.983 0 0 1-.424-1.05 24.614 24.614 0 0 1-4.76-1.05.75.75 0 0 1-.516-.75c.057-1.16.194-2.302.405-3.417a.75.75 0 0 1 1.474.28c-.164.862-.28 1.74-.345 2.634 1.237.371 2.517.642 3.832.803.085-.266.207-.515.359-.742a18.698 18.698 0 0 1-.547-.08c-.664-.11-1.311-.612-1.417-1.404a4.535 4.535 0 0 1 .217-2.103 6.788 6.788 0 0 1-.788-.751.75.75 0 0 1-.187-.583 5.22 5.22 0 0 1 .67-2.04.75.75 0 0 1 1.026-.273Z" 
-                clip-rule="evenodd" 
-                />
-            </svg>
+            </div>
+            <div id="interfaceWave" style="display: flex; align-items: center;">  
+                <svg 
+                    style="width: 27px; height: 27px; color: black; margin-right: 3px;"
+                    xmlns="http://www.w3.org/2000/svg" 
+                    viewBox="0 0 24 24" 
+                    fill="currentColor" 
+                    class="w-6 h-6"
+                >
+                    <path 
+                        fill-rule="evenodd" 
+                        d="M8.478 1.6a.75.75 0 0 1 .273 1.026 3.72 3.72 0 0 0-.425 1.121c.058.058.118.114.18.168A4.491 4.491 0 0 1 12 2.25c1.413 0 2.673.651 3.497 1.668.06-.054.12-.11.178-.167a3.717 3.717 0 0 0-.426-1.125.75.75 0 1 1 1.298-.752 5.22 5.22 0 0 1 .671 2.046.75.75 0 0 1-.187.582c-.241.27-.505.52-.787.749a4.494 4.494 0 0 1 .216 2.1c-.106.792-.753 1.295-1.417 1.403-.182.03-.364.057-.547.081.152.227.273.476.359.742a23.122 23.122 0 0 0 3.832-.803 23.241 23.241 0 0 0-.345-2.634.75.75 0 0 1 1.474-.28c.21 1.115.348 2.256.404 3.418a.75.75 0 0 1-.516.75c-1.527.499-3.119.854-4.76 1.049-.074.38-.22.735-.423 1.05 2.066.209 4.058.672 5.943 1.358a.75.75 0 0 1 .492.75 24.665 24.665 0 0 1-1.189 6.25.75.75 0 0 1-1.425-.47 23.14 23.14 0 0 0 1.077-5.306c-.5-.169-1.009-.32-1.524-.455.068.234.104.484.104.746 0 3.956-2.521 7.5-6 7.5-3.478 0-6-3.544-6-7.5 0-.262.037-.511.104-.746-.514.135-1.022.286-1.522.455.154 1.838.52 3.616 1.077 5.307a.75.75 0 1 1-1.425.468 24.662 24.662 0 0 1-1.19-6.25.75.75 0 0 1 .493-.749 24.586 24.586 0 0 1 4.964-1.24h.01c.321-.046.644-.085.969-.118a2.983 2.983 0 0 1-.424-1.05 24.614 24.614 0 0 1-4.76-1.05.75.75 0 0 1-.516-.75c.057-1.16.194-2.302.405-3.417a.75.75 0 0 1 1.474.28c-.164.862-.28 1.74-.345 2.634 1.237.371 2.517.642 3.832.803.085-.266.207-.515.359-.742a18.698 18.698 0 0 1-.547-.08c-.664-.11-1.311-.612-1.417-1.404a4.535 4.535 0 0 1 .217-2.103 6.788 6.788 0 0 1-.788-.751.75.75 0 0 1-.187-.583 5.22 5.22 0 0 1 .67-2.04.75.75 0 0 1 1.026-.273Z" 
+                        clip-rule="evenodd" 
+                    />
+                </svg>
+            </div>
             <div id="wave">1</div>
-        <div id="interfaceLives" style="display: flex; align-items: center;">  
-            <svg 
-                style="width: 27px; height: 27px; color: red; margin-right: 3px; margin-left: 15px;"
-                xmlns="http://www.w3.org/2000/svg" 
-                viewBox="0 0 24 24" 
-                fill="currentColor" 
-                class="w-6 h-6"
-            >
-                <path d="m11.645 20.91-.007-.003-.022-.012a15.247 15.247 0 0 1-.383-.218 25.18 25.18 0 0 1-4.244-3.17C4.688 15.36 2.25 12.174 2.25 8.25 2.25 5.322 4.714 3 7.688 3A5.5 5.5 0 0 1 12 5.052 5.5 5.5 0 0 1 16.313 3c2.973 0 5.437 2.322 5.437 5.25 0 3.925-2.438 7.111-4.739 9.256a25.175 25.175 0 0 1-4.244 3.17 15.247 15.247 0 0 1-.383.219l-.022.012-.007.004-.003.001a.752.752 0 0 1-.704 0l-.003-.001Z" 
-                />
-            </svg>
-            <div id="lives">10</div>       
-        </div>
-        <div id="interfaceMoney" style="display: flex; align-items: center;">  
-            <svg 
-                style="width: 27px; height: 27px; color: gold; margin-right: 3px; margin-left: 15px;"
-                xmlns="http://www.w3.org/2000/svg" 
-                viewBox="0 0 24 24" 
-                fill="currentColor" 
-                class="w-6 h-6"
-            >
-                <path d="M21 6.375c0 2.692-4.03 4.875-9 4.875S3 9.067 3 6.375 7.03 1.5 12 1.5s9 2.183 9 4.875Z" />
-                <path d="M12 12.75c2.685 0 5.19-.586 7.078-1.609a8.283 8.283 0 0 0 1.897-1.384c.016.121.025.244.025.368C21 12.817 16.97 15 12 15s-9-2.183-9-4.875c0-.124.009-.247.025-.368a8.285 8.285 0 0 0 1.897 1.384C6.809 12.164 9.315 12.75 12 12.75Z" />
-                <path d="M12 16.5c2.685 0 5.19-.586 7.078-1.609a8.282 8.282 0 0 0 1.897-1.384c.016.121.025.244.025.368 0 2.692-4.03 4.875-9 4.875s-9-2.183-9-4.875c0-.124.009-.247.025-.368a8.284 8.284 0 0 0 1.897 1.384C6.809 15.914 9.315 16.5 12 16.5Z" />
-                <path d="M12 20.25c2.685 0 5.19-.586 7.078-1.609a8.282 8.282 0 0 0 1.897-1.384c.016.121.025.244.025.368 0 2.692-4.03 4.875-9 4.875s-9-2.183-9-4.875c0-.124.009-.247.025-.368a8.284 8.284 0 0 0 1.897 1.384C6.809 19.664 9.315 20.25 12 20.25Z" />
-                />
-            </svg> 
-            <div id="money" style="margin-right: 15px;">100</div>        
+            <div id="interfaceLives" style="display: flex; align-items: center;">  
+                <svg 
+                    style="width: 27px; height: 27px; color: red; margin-right: 3px; margin-left: 15px;"
+                    xmlns="http://www.w3.org/2000/svg" 
+                    viewBox="0 0 24 24" 
+                    fill="currentColor" 
+                    class="w-6 h-6"
+                >
+                    <path 
+                        d="m11.645 20.91-.007-.003-.022-.012a15.247 15.247 0 0 1-.383-.218 25.18 25.18 0 0 1-4.244-3.17C4.688 15.36 2.25 12.174 2.25 8.25 2.25 5.322 4.714 3 7.688 3A5.5 5.5 0 0 1 12 5.052 5.5 5.5 0 0 1 16.313 3c2.973 0 5.437 2.322 5.437 5.25 0 3.925-2.438 7.111-4.739 9.256a25.175 25.175 0 0 1-4.244 3.17 15.247 15.247 0 0 1-.383.219l-.022.012-.007.004-.003.001a.752.752 0 0 1-.704 0l-.003-.001Z" 
+                    />
+                </svg>
+            </div>
+            <div id="lives">10</div>
+            <div id="interfaceMoney" style="display: flex; align-items: center;">  
+                <svg 
+                    style="width: 27px; height: 27px; color: gold; margin-right: 3px; margin-left: 15px;"
+                    xmlns="http://www.w3.org/2000/svg" 
+                    viewBox="0 0 24 24" 
+                    fill="currentColor" 
+                    class="w-6 h-6"
+                >
+                    <path d="M21 6.375c0 2.692-4.03 4.875-9 4.875S3 9.067 3 6.375 7.03 1.5 12 1.5s9 2.183 9 4.875Z" />
+                    <path d="M12 12.75c2.685 0 5.19-.586 7.078-1.609a8.283 8.283 0 0 0 1.897-1.384c.016.121.025.244.025.368C21 12.817 16.97 15 12 15s-9-2.183-9-4.875c0-.124.009-.247.025-.368a8.285 8.285 0 0 0 1.897 1.384C6.809 12.164 9.315 12.75 12 12.75Z" />
+                    <path d="M12 16.5c2.685 0 5.19-.586 7.078-1.609a8.282 8.282 0 0 0 1.897-1.384c.016.121.025.244.025.368 0 2.692-4.03 4.875-9 4.875s-9-2.183-9-4.875c0-.124.009-.247.025-.368a8.284 8.284 0 0 0 1.897 1.384C6.809 15.914 9.315 16.5 12 16.5Z" />
+                    <path d="M12 20.25c2.685 0 5.19-.586 7.078-1.609a8.282 8.282 0 0 0 1.897-1.384c.016.121.025.244.025.368 0 2.692-4.03 4.875-9 4.875s-9-2.183-9-4.875c0-.124.009-.247.025-.368a8.284 8.284 0 0 0 1.897 1.384C6.809 19.664 9.315 20.25 12 20.25Z" />
+                    />
+                </svg> 
+            </div>
+            <div id="money" style="margin-right: 15px;">150</div>
         </div>
     </div>
-</div>
 
-<script src="js/waypointsPathing.js"></script>
-<script src="js/towerPlacementsData.js"></script>
-<script src="js/classes/Sprite.js"></script>
-<script src="js/classes/PlacementTile.js"></script>
-<script src="js/classes/Projectile.js"></script>
-<script src="js/classes/Enemy.js"></script>
-<script src="js/classes/Tower.js"></script>
-<script src="js/index.js"></script>
+    <script src="js/waypointsPathing.js"></script>
+    <script src="js/towerPlacementsData.js"></script>
+    <script src="js/classes/Sprite.js"></script>
+    <script src="js/classes/PlacementTile.js"></script>
+    <script src="js/classes/Projectile.js"></script>
+    <script src="js/classes/Enemy.js"></script>
+    <script src="js/classes/SecondEnemyWorm.js"></script>
+    <script src="js/classes/ThirdEnemyShroom.js"></script>
+    <script src="js/classes/FourthEnemyRunner.js"></script>
+    <script src="js/classes/EnemyBoss.js"></script>
+    <script src="js/classes/Tower.js"></script>
+    <script src="js/index.js"></script>
+
+</body>
+
+</html>
