--- a/index.html
+++ b/index.html
@@ -10,37 +10,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
-
-    <style>
-        body {
-            background-color: black;
-            font-family: 'DotGothic16', sans-serif;
-        }
-        .gameOverWinContainer {
-            position: absolute; 
-            top: 0; 
-            bottom: 0; 
-            left: 0; 
-            right: 0;
-            display: none; 
-            align-items: center;
-            justify-content: center;
-            background-color: rgba(0, 0, 0, 0.75);
-            font-size: 80px;
-            color: white;
-            -webkit-text-stroke: 3px black;
-        }
-        #gameOver, #youWin {
-            font-size: 100px;
-            color: white;
-            -webkit-text-stroke: 3px black;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-    <div style="position: relative; display: inline-block">
+    <div id="main">
         <canvas></canvas>
         <div id="gameOver" class="gameOverWinContainer">
             GAME OVER
@@ -48,36 +23,9 @@
         <div id="youWin" class="gameOverWinContainer">
             YOU WIN!
         </div>
-        <div 
-            style="
-            position: absolute; 
-            top: 4px; 
-            right: 8px; 
-            font-size: 25;
-            color: black;
-            display: flex;
-            align-items: center;
-            font-weight: bold;
-            "
-        >
-            <div
-                style="
-                    position: absolute;
-                    top: 0;
-                    right: 5px;
-                    width: 215px;
-                    height: 30px;
-                    border-radius: 10px;
-                    background: linear-gradient(
-                        to right top,
-                        rgba(0, 0, 0, 0.05), 
-                        rgba(0, 0, 0, 0.225),
-                        rgba(0, 0, 0, 0.05) 
-                    );
-                "
-            >
-            </div>
-            <div id="interfaceWave" style="display: flex; align-items: center;">  
+        <div id="interface">
+            <div id="interfaceBackground"></div>
+            <div id="interfaceWave">  
                 <svg 
                     style="width: 27px; height: 27px; color: black; margin-right: 3px;"
                     xmlns="http://www.w3.org/2000/svg" 
@@ -93,7 +41,7 @@
                 </svg>
             </div>
             <div id="wave">1</div>
-            <div id="interfaceLives" style="display: flex; align-items: center;">  
+            <div id="interfaceLives">  
                 <svg 
                     style="width: 27px; height: 27px; color: red; margin-right: 3px; margin-left: 15px;"
                     xmlns="http://www.w3.org/2000/svg" 
@@ -107,7 +55,7 @@
                 </svg>
             </div>
             <div id="lives">10</div>
-            <div id="interfaceMoney" style="display: flex; align-items: center;">  
+            <div id="interfaceMoney">  
                 <svg 
                     style="width: 27px; height: 27px; color: gold; margin-right: 3px; margin-left: 15px;"
                     xmlns="http://www.w3.org/2000/svg" 
@@ -122,7 +70,7 @@
                     />
                 </svg> 
             </div>
-            <div id="money" style="margin-right: 15px;">150</div>
+            <div id="money">150</div>
         </div>
     </div>
 
